--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "jassi",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.4",
     "passport": "^0.6.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "razorpay": "^2.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
