--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.4",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "razorpay": "^2.8.4"
